--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   },
   "dependencies": {
     "@studio-freight/lenis": "^1.0.39",
-    "framer-motion": "^11.0.12",
+    "clsx": "^2.1.1",
+    "framer-motion": "^11.1.9",
     "next": "14.1.3",
     "react": "^18",
     "react-dom": "^18",
-    "sharp": "^0.33.3"
+    "sharp": "^0.33.3",
+    "tailwind-merge": "^2.3.0"
   },
   "devDependencies": {
     "@types/node": "^20",
