--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@studio-freight/lenis": "^1.0.39",
     "clsx": "^2.1.1",
+    "embla-carousel-autoplay": "^8.0.4",
     "framer-motion": "^11.1.9",
     "next": "14.1.3",
     "react": "^18",
